# Hermes

./: CMakeLists.txt  CMakeUserPresets.json  Dependencies.cmake  README.md  build.sh  conanfile.txt  debugBuild.sh  releaseBuild.sh
bench/: CMakeLists.txt
bench/orderbook/: CMakeLists.txt
benchmark/orderbook/: OrderbookBenchmark.cxx
docs/: DESIGN.md  README.md  design.md  references.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Service.hxx
src/gateway/: CMakeLists.txt  Gateway.hxx  Protocol.hxx
src/orchestrator/: CMakeLists.txt  Orchestrator.hxx
src/order-manager/: CMakeLists.txt
src/orderbook/: CMakeLists.txt  Container.hxx  Order.hxx  OrderBook.hxx  OrderType.hxx  README.md  Trade.hxx  TradeListener.hxx  Types.hxx
src/routing/: CMakeLists.txt  Routing.hxx
src/shared/: CMakeLists.txt
src/strategy/: CMakeLists.txt
test/: CMakeLists.txt  TestMain.cxx
test/orderbook/: CMakeLists.txt  ContainerTest.cxx  ContainerTest.hxx  OrderTest.hxx  OrderbookTest.cxx  OrderbookTest.hxx  OrderbookTestMain.cxx  TradeListenerTest.hxx  TradeTest.hxx
